--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Hecord" />
+    <meta name="description" content="attendance" />
     <link rel="icon" href="image/logo.png" type="image/jpg" sizes="16x16" />
 
     <link
@@ -17,7 +17,7 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
 
-    <title>Kriova | Employee Management</title>
+    <title>Attendance Management</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
